Werkzeug Changelog
==================

Version 0.7.2
-------------

(bugfix release, release date to be announced)

- Fixed a CSRF problem with the debugger.
- The debugger is now generating private pastes on lodgeit.

Version 0.7.1
-------------

(bugfix release, released on July 26th 2011)

- Fixed a problem with newer versions of IPython
- Disabled pyinotify based reloader which does not work reliably.

Version 0.7
-----------

Released on July 24th 2011, codename Schraubschlüssel

- Add support for python-libmemcached to the Werkzeug cache abstraction
  layer.
- improved :func:`url_decode` and :func:`url_encode` performance.
- fixed an issue where the SharedDataMiddleware could cause an
  internal server error on weird paths when loading via pkg_resources.
- fixed an URL generation bug that caused URLs to be invalid if a
  generated component contains a colon.
- :func:`werkzeug.import_string` now works with partially set up
  packages properly.
- disabled automatic socket swiching for IPv6 on the development
  server due to problems it caused.
- Werkzeug no longer overrides the Date header when creating a
  conditional HTTP response.
- The routing system provides a method to retrieve the matching
  methods for a given path.
- The routing system now accepts a parameter to change the encoding
  error behaviour.
- The local manager can now accept custom ident functions in the
  constructor that are forwarded to the wrapped local objects.
- url_unquote_plus now accepts unicode strings again.
- fixed an issues with the filesystem session support's prune
  function and concurrent usage.
- fixed a problem with external URL generation discarding the port.
- added support for pylibmc to the Werkzeug cache abstraction layer.
- fixed an issue with the new multipart parser that happened when
  a linkebreak happend to be on the chunk limit.
- cookies are now set properly if ports are in use.  A runtime error